# apt-package-function

./: .flake8  .gitignore  CHANGELOG.md  README.md  SUPPORT.md  create_resources.sh  create_resources_nosharedkey.sh  dev-requirements.txt  function_app.py  mypy.ini  pyproject.toml  requirements.txt  rg.bicep  rg_add_eventgrid.bicep  rg_funcapp.bicep  waitfortrigger.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
src/apt_package_function/: __init__.py  azcmd.py  bicep_deployment.py  create_resources.py  func_app.py  poetry.py  resource_group.py
