[tool.poetry]
name = "apt-package-function"
version = "0.1.0"
description = "Functionality to create a Debian package repository in Azure Blob Storage"
authors = ["Max Dymond <max.dymond@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
azure-functions = "^1.20.0"
azure-identity = "^1.17.1"
azure-storage-blob = "^12.22.0"
pydpkg = "^1.9.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
flake8-docstrings = "^1.7.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Script to create resources in Azure
create-resources = "apt_package_function.create_resources:run"
